# multifractal-speech-analysis

./: .gitignore  PPT_CONTENT.md  REPORT.md  main.py  pyproject.toml
.github/instructions/: always-use-uv.instructions.md
data/: .gitignore
data/processed/features/: acoustic_features.csv  feature_build_config.json  feature_summary.json  model_table_snapshot.csv  multifractal_features.csv  neurokit2_features.csv  opensmile_features.csv  sample_core.csv  sample_splits.csv
notebooks/: data_and_features_visualization.ipynb  data_validation.ipynb  feature_ablation_study.ipynb  feature_extraction_showcase.ipynb  fractal_analysis_disease_groups.ipynb  mfdfa_hq_visualization.ipynb  model_training_baselines.ipynb  model_training_feature_engineered.ipynb  model_training_mfdfa_only.ipynb  model_training_per_disease.ipynb  model_training_v2.ipynb  model_training_v2_grouped.ipynb  model_training_v3_1_grouped.ipynb  model_training_v3_grouped.ipynb  model_training_v4_sample_level.ipynb  model_training_v5.ipynb  model_training_v6.ipynb  model_training_v6_only_two_grps.ipynb  model_training_v7.ipynb  view_data.ipynb
scripts/: audit_speaker_overlaps.py  create_v4_notebook.py  dataset_stats.py  extract_nb_results.py  extract_nb_results2.py  pick_samples.py
src/: config.py  sanity_check.py
src/data/: __init__.py  data_pipeline.py
src/features/: __init__.py  feature_cache.py  feature_extraction.py  feature_options.py  feature_pipeline.py
