[project]
name = "multifractal-speech-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.8",
    "librosa>=0.11.0",
    "lightgbm>=4.6.0",
    "MFDFA>=0.4.3",
    "neurokit2>=0.2.12",
    "nspfile>=0.2.0",
    "opensmile>=2.6.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.3",
    "xgboost>=3.2.0",
]
